Update to hal-core 3-dev

--- a/config/.env.dev.dist
+++ b/config/.env.dev.dist
@@ -8,15 +8,16 @@ HAL_BASEURL='http://hal.local'
 HAL_ADMIN_EMAIL="admin@hal.computer"
 
 # hal core
-#HAL_DB_USER=''
+#HAL_DB_USER='hal'
 #HAL_DB_PASSWORD=''
 HAL_DB_HOST='localhost'
-HAL_DB_PORT='3306'
+HAL_DB_PORT='5432'
 HAL_DB_NAME='hal'
-HAL_DB_DRIVER='pdo_mysql'
+HAL_DB_DRIVER='pdo_pgsql'
 
 HAL_ORM_DEVMODE_ON='1'
 HAL_ORM_PROXY_DIR="${HAL_ROOT}/.doctrine"
+HAL_ORM_CONFIG_DIR="${HAL_ROOT}/vendor/hal/hal-core/config/doctrine"
 # (memory, redis)
 HAL_ORM_CACHE='memory'
 
