--- a/config/.env.prod.dist
+++ b/config/.env.prod.dist
@@ -11,12 +11,13 @@ HAL_ADMIN_EMAIL="admin@hal.computer"
 #HAL_DB_USER=''
 #HAL_DB_PASSWORD=''
 HAL_DB_HOST='prodsql.example.com'
-HAL_DB_PORT='3306'
+HAL_DB_PORT='5432'
 HAL_DB_NAME='hal'
-HAL_DB_DRIVER='pdo_mysql'
+HAL_DB_DRIVER='pdo_pgsql'
 
 HAL_ORM_DEVMODE_ON='0'
 HAL_ORM_PROXY_DIR="${HAL_ROOT}/.doctrine"
+HAL_ORM_CONFIG_DIR="${HAL_ROOT}/vendor/hal/hal-core/config/doctrine"
 # (memory, redis)
 HAL_ORM_CACHE='redis'
 
