--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "ext-pdo_mysql":      "*",
         "ext-pdo_sqlite":     "*",
         "ext-xmlwriter":      "*",
+
         "doctrine/orm":             "~2.5.6",
         "guzzlehttp/psr7":          "~1.3",
         "guzzlehttp/guzzle":        "6.*",
@@ -34,7 +35,7 @@
         "predis/predis":            "~1.0",
         "psr/log":                  "*",
 
-        "ql/hal-core":              "2.10.0",
+        "hal/hal-core":             "dev-master",
 
         "ql/mcp-cache":             "~3.0.0",
         "ql/mcp-common":            "~1.0",
