Re-combulate configs around

--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -58,7 +58,7 @@ parameters:
     ############################################################################
     # doctrine
     ############################################################################
-    doctrine.user.service: 'doctrine.utility.lazy.user'
+    # placeholder
 
     ############################################################################
     # twig
