Add user and users pages

--- a/config/services/security.yaml
+++ b/config/services/security.yaml
@@ -12,6 +12,10 @@ services:
             - ['setCache', ['@cache']]
             - ['setCacheTTL', ['%cache.permissions.ttl%']]
 
+    service.authorization_hydrator:
+        class: 'Hal\UI\Security\AuthorizationHydrator'
+        arguments: ['@doctrine.em']
+
     ####################################################################################################################
     # CRYPTO
     ####################################################################################################################
