--- a/config/ui/services.yaml
+++ b/config/ui/services.yaml
@@ -20,6 +20,10 @@ services:
         class: 'Hal\UI\Validator\EnvironmentValidator'
         arguments: ['@doctrine.em']
 
+    validator.application:
+        class: 'Hal\UI\Validator\ApplicationValidator'
+        arguments: ['@doctrine.em', '@github']
+
     #
 
     build.start.validator:
