Update Encrypted Configuration to Hal Core 3.0

--- a/config/ui/controllers.yaml
+++ b/config/ui/controllers.yaml
@@ -446,6 +446,7 @@ services:
         arguments:
             - '@doctrine.em'
             - '@encrypter'
+            - '@validator.encrypted_property'
             - '@uri'
             - '@doctrine.random'
 
