--- a/config/ui/middleware.yaml
+++ b/config/ui/middleware.yaml
@@ -69,9 +69,9 @@ services:
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'encrypted']
 
-    middleware.removal_confirmation.server:
+    middleware.removal_confirmation.group:
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
-        arguments: ['@middleware.removal_confirmation.twig', 'server']
+        arguments: ['@middleware.removal_confirmation.twig', 'group']
     middleware.removal_confirmation.environment:
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'environment']
